turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:8: error: too many arguments for method getCouleur: ()java.awt.Color
  getCouleur(Color.red)
            ^DiskFour:14: error: too many arguments for method getCouleur: ()java.awt.Color
  getCouleur(Color.yellow)
            ^DiskFour:20: error: too many arguments for method getCouleur: ()java.awt.Color
  getCouleur(Color.pink)
            ^