turtleart.diskfour.DiskFour.scala.code
override def run() {
 
  for(k<-0 to 89){
    avance(100)
    recule(100)
    droite(1)
  }
  getCouleur(Color.red)
  for(k<-0 to 89){
    avance(100)
    recule(100)
    droite(1)
  }
  getCouleur(Color.yellow)
  for(k<-0 to 89){
    avance(100)
    recule(100)
    droite(1)
  }
  getCouleur(Color.pink)
  for(k<-0 to 89){
    avance(100)
    recule(100)
    droite(1)
  }
}